// Top-level build file. Per-module configuration lives in app/build.gradle.
plugins {
    id 'com.android.application' version '8.7.3' apply false
    id 'org.jetbrains.kotlin.android' version '1.9.25' apply false
}

tasks.register('clean', Delete) {
    delete rootProject.layout.buildDirectory
}


subprojects {
    plugins.withId('org.jetbrains.kotlin.android') {
        kotlin {
            // Compile with whatever JDK Gradle is running on (JDK 17 in CI/dev
            // images), while still emitting Java 8 bytecode via module-level
            // kotlinOptions.jvmTarget = "1.8".
            jvmToolchain(17)
        }
    }
}
